--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
     <div class="container-fluid">
         <div class="row" style="text-align: center;">
-            <img src="assets/img/h1.jpg" style="width: 100%;">
+            <img src="assets/header.png" style="width: 100%;">
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
         direction="left" onmouseover="this.stop();" onmouseout="this.start();">
         <span>
-            Paper submission for IPRECON 2024 will open soon. 
+            Paper submission for IPRECON 2024 will open soon.
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -84,8 +84,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1"
                     style="font-family: Montserrat, sans-serif;font-size: 12px;">
                     <ul class="nav navbar-nav ml-auto" style="font-size: 14px;">
-                        <li class="nav-item" role="presentation"><a class="nav-link active"
-                                href="./index.html">HOME<br></a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="./index.html">HOME</a>
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
                                 aria-expanded="false" href="#">ABOUT</a>
                             <div class="dropdown-menu" role="menu">
@@ -113,7 +112,7 @@
                                     INSTRUCTIONS</a>
                                 <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION
                                     VIDEO GUIDELINES</a>
-                                <a class="dropdown-item" role="presentation" href="assets/CFP 23.pdf">CALL FOR PAPERS</a>
+                                <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
                                 <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
                             </div>
                         </li>
@@ -128,7 +127,7 @@
                             </div>
                         </li> -->
                         <li class="nav-item" role="presentation"><a class="nav-link"
-                                href="./registration.html">REGISTRATION</a></li>
+                                href="./registrationsoon.html">REGISTRATION</a></li>
                         <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                         <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a>
                         </li>
@@ -221,15 +220,15 @@
                             10th November 2024</b> (Hybrid Conference)</p>
                     <hr>
                     <span>
-                   <a href="./submission.html">              
+                   <a href="./submission.html">
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Submit Paper</strong></button></a>
                     </span>
                     <span>
-                   <a href="./cfp.html">              
+                   <a href="./cfp.html">
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Call for Papers</strong></button></a>
                     </span>
                     <!-- <span>
-                   <a target="blank" href="./registration.html">              
+                   <a target="blank" href="./registration.html">
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Register Now</strong></button></a>
                     </span> -->
                     <p class="text-left" style="font-size: 18px;font-family: Montserrat, sans-serif;">
@@ -250,7 +249,7 @@
                         style="font-family: Montserrat, sans-serif;color: rgb(255,255,255);margin-top: 0px;font-size: 32px;">
                         About</h1>
                     <p class="text-justify"
-                        style="font-family: Montserrat, sans-serif;color: rgb(255,255,255);font-size: 13px;padding: 0px;padding-top: 0px;margin-top: 33px;">
+                        style="font-family: Montserrat, sans-serif;color: rgb(255,255,255);font-size: 14px;padding: 0px;padding-top: 0px;margin-top: 33px;">
                         2024 IEEE International Power and Renewable Energy Conference (IPRECON) is
                         the 4th edition of India's first IEEE IAS Club of 6 Technical Paper Conference organized
                         by the IEEE Student Branch College of Engineering Karunagappally. IPRECON provides a
@@ -261,7 +260,7 @@
                         10th of November 2024 at College of Engineering Karunagappally, Kerala, India.</p>
                 </div>
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" style="padding: 0px;padding-top: 0px;">
-                    <img src="assets/img/iprecon23_white.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
+                    <img src="assets/img/iprecon24_White_new.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
                 </div>
             </div>
         </div>
@@ -283,7 +282,7 @@
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
                             <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>Februvary 2024</b></h6>
+                            <h6 class="text-muted card-subtitle mb-2"><b>February 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br>
                         </div>
                     </div>
@@ -308,7 +307,7 @@
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
                             <br>
-                            <!--p class="card-text" style="font-size: 20px; color: red;">For Submission Related Queries <a style="color: rgb(202, 60, 60);" 
+                            <!--p class="card-text" style="font-size: 20px; color: red;">For Submission Related Queries <a style="color: rgb(202, 60, 60);"
                                 href="./contact.html">Click here!</a></p-->
                         </div>
                     </div>
@@ -358,11 +357,11 @@
                                     Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes
                                     and quality requirements.<br><br>
                                     <a href="assets/CFP 23.pdf"><button class="btn btn-primary" type="button"
-                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Open Soon
-                                                CFP</strong></button></a>
+                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>CFP Opening Soon
+                                            </strong></button></a>
                                     &nbsp;
                                     <a href=""><button class="btn btn-primary" type="button"
-                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Submit paper will open soon </strong></button></a>
+                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Submission starts soon </strong></button></a>
                         </div>
                     </div>
 
@@ -472,7 +471,7 @@
                     </div>
             </div>
         </div>
-        
+
         <div class="row" style="margin-top: 40px;">
             <div class="col-md-12" style="margin-bottom: 0px; padding-left: 50px; padding-right: 50px;">
                 <h2 style="font-size: 25px;margin-bottom: 20px;"><strong>IPRECON 2020</strong><br></h1>
@@ -514,7 +513,7 @@
 
     </div>
     <div style="margin-top: 30px;background-color: #210F21;padding-top: 70px;padding-bottom: 87px;">
-        <div class="container">
+        <div id="legacySection" class="container">
             <div class="row">
                 <div class="col-md-12" style="margin-bottom: 34px;">
                     <h1 class="text-center"
@@ -554,8 +553,8 @@
                         Branch College of Engineering Karunagappally, <br>Engineering College Rd, Thodiyoor
                         P.O,<br>Kollam, Karunagappally, Kerala,<br>India 690523<br><br>Email:
                         ieeesbcek2000@gmail.com<br>iprecon2023@gmail.com<br><br>
-                        <br>Alister Clietus: +91 90745 73015<br>Sidhi A S: +91 97782 31771<br>Archa S: +91 88480
-                        09402<br>Ajas Muhammed N: +91 89217 47219<br>
+                        <br>Alister Clietus: +91 90745 73015<br>Sidhi A S: +91 97782 31771<br>Ajas Muhammed N: +91 89217 47219<br>Archa S : +91 88480
+                        09402<br>
                     </p>
                 </div>
             </div>
@@ -579,7 +578,7 @@
                         <ul>
                             <li><a href="https://ieeesbcek.org">IEEE SB CEK</a></li>
                             <li><a href="./committee.html">Team</a></li>
-                            <li><a href="#">Legacy</a></li>
+                            <li><a href="#legacySection">Legacy</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
