--- a/committee.html
+++ b/committee.html
@@ -466,7 +466,7 @@
         </div>
     </div>
     <br>
-    <div>
+    <!-- <div>
         <div class="container" style="margin-top: 45px; margin-bottom: 8px;" data-aos="fade-up">
             <div class="row">
                 <div class="col">
@@ -703,7 +703,8 @@
             </div>
         </div>
     </div>
-    <br>
+    <br> -->
+    
     <!--div style="margin-top: 29px;" data-aos="fade-up">
         <div class="container">
             <div class="row">
