--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                                     2020</a>
                             </div>
                         </li>
-                        <!-- <li class="nav-item" role="presentation"><a class="nav-link"
-                                href="./committee.html">COMMITTEE</a></li> -->
+                        <li class="nav-item" role="presentation"><a class="nav-link"
+                                href="./committee.html">COMMITTEE</a></li>
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
                                 aria-expanded="false" href="#">FOR AUTHORS</a>
                             <div class="dropdown-menu" role="menu">
