--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <br><br>-->
 
                         &#10132; 20% of the presented conference papers will be eligible for further review and possible publication in IAS Periodicals.
-                        <br><br> &#10132; Presented papers of IPRECON 2022 have been posted in the Xplore@ Digital Library!To View
+                        <br><br> &#10132; Presented papers of IPRECON 2022 have been posted in the Xplore® Digital Library!To View
                         <a href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding" style="color: wheat; padding-left: 0.2rem;"><strong>Click
                                 here<i class="ionicons ion-link" style="font-size: 25px;"></i></strong></a>
 
